<?xml version="1.0"?>
<package format="3">
  <name>ros2yolo</name>
  <version>0.1.0</version>
  <description>ROS2 node that runs YOLO inference on camera images and publishes results.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_type>ament_python</build_type>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>

  <exec_depend>python3-opencv</exec_depend>


</package>
