[metadata]
name = ros2yolo
version = 0.1.0
description = ROS2 YOLO node
author = Your Name

[options]
packages = find:
install_requires =
    opencv-python
    numpy
    ultralytics
zip_safe = false

[options.entry_points]
console_scripts =
    yolo_node = ros2yolo.yolo_node:main
    convert_to_pose = ros2yolo.convert_to_pose:main
